# maxpowr

./: .gitignore  LICENSE.txt  README.md
Endpoint/: .gitignore  CMakeLists.txt  Decryptor.cpp  Decryptor.h  Endpoint.cpp  KeyMaterial.h  README.md  powChallenges.txt
Endpoint/Utils/: Buffer.h  CryptoUtils.cpp  ProgressUtils.cpp  ProgressUtils.h
MemExporter/: .gitignore  Makefile  README.md  buildenv.mk
MemExporter/Enclave/: DummyUtils.cpp  DummyUtils.h  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  EnclaveSGXUtils.cpp  EnclaveSGXUtils.h  KeyMaterial.h  StackCrawler.cpp  StackCrawler.h
MemExporter/Injector/: InjectedMacro.hpp  Injector.py
